--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@ webengage.init('14507cd64');
 </head>
 <body>
 
-<h1>This is a HeadinG</h1>
+<h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
+  
+<button type="button" onclick="myFunction()">Login</button>
+
+
+<script>
+function myFunction() { 
+  webengage.user.login('9SBOkLVMWvPX');
+}
+</script>
 
 </body>
 </html>
