--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ webengage.init('14507cd64');
 <script>
 function myFunction() { 
   webengage.user.login('9SBOkLVMWvPX');
+  webengage.track("Added To Cart", {
+                                            "Product ID" : "AXK1337",
+                                            "Price" : 39.80,
+                                        });
 }
 </script>
 
