--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ webengage.init('14507cd64');
 </head>
 <body>
 
-<h1>This is a Heading</h1>
+<h1>This is Heading</h1>
 <p>This is a paragraph.</p>
   
 <button type="button" onclick="myFunction()">Login</button>
