--- a/index.html
+++ b/index.html
@@ -11,18 +11,7 @@ webengage.init('14507cd64');
 <h1>This is Heading</h1>
 <p>This is a paragraph.</p>
   
-<button type="button" onclick="myFunction()">Login</button>
-
-
-<script>
-function myFunction() { 
-  webengage.user.login('9SBOkLVMWvPX');
-  webengage.track("Added To Cart", {
-                                            "Product ID" : "AXK1337",
-                                            "Price" : 39.80,
-                                        });
-}
-</script>
+<button type="button" onclick=" webengage.user.login('9SBOkLVMWvPX')">Login</button>
 
 </body>
 </html>
