--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ webengage.init('14507cd64');
 <script>
 function myFunction() { 
   webengage.user.login('9SBOkLVMWvPX');
+	webengage.track("Added To Cart", {
+"Product ID" : "AXK1337",
+"Price" : 39.80,
+});
   alert("9SBOkLVMWvPX, World");
 }
 </script>
