--- a/index.html
+++ b/index.html
@@ -1,10 +1,46 @@
 <html>
 <head>
 <title>Page Title</title>
-<script id='_webengage_script_tag' type='text/javascript'>
-var webengage; !function(w,e,b,n,g){function o(e,t){e[t[t.length-1]]=function(){r.__queue.push([t.join("."),arguments])}}var i,s,r=w[b],z=" ",l="init options track screen onReady".split(z),a="feedback survey notification".split(z),c="options render clear abort".split(z),p="Open Close Submit Complete View Click".split(z),u="identify login logout setAttribute".split(z);if(!r||!r.__v){for(w[b]=r={__queue:[],__v:"6.0",user:{}},i=0;i<l.length;i++)o(r,[l[i]]);for(i=0;i<a.length;i++){for(r[a[i]]={},s=0;s<c.length;s++)o(r[a[i]],[a[i],c[s]]);for(s=0;s<p.length;s++)o(r[a[i]],[a[i],"on"+p[s]])}for(i=0;i<u.length;i++)o(r.user,["user",u[i]]);setTimeout(function(){var f=e.createElement("script"),d=e.getElementById("_webengage_script_tag");f.type="text/javascript",f.async=!0,f.src=("https:"==e.location.protocol?"https://ssl.widgets.webengage.com":"http://cdn.widgets.webengage.com")+"/js/webengage-min-v-6.0.js",d.parentNode.insertBefore(f,d)})}}(window,document,"webengage");
-webengage.init('14507cd64');
+<script id="_webengage_script_tag" type="text/javascript">
+  var webengage;
+  ! function(w, e, b, n, g) {
+    function o(e, t) {
+      e[t[t.length - 1]] = function() {
+        r.__queue.push([t.join("."), arguments])
+      }
+    }
+    var i, s, r = w[b],
+      z = " ",
+      l = "init options track screen onReady".split(z),
+      a = "feedback survey notification".split(z),
+      c = "options render clear abort".split(z),
+      p = "Open Close Submit Complete View Click".split(z),
+      u = "identify login logout setAttribute".split(z);
+    if (!r || !r.__v) {
+      for (w[b] = r = {
+          __queue: [],
+          __v: "6.0",
+          user: {}
+        }, i = 0; i < l.length; i++) o(r, [l[i]]);
+      for (i = 0; i < a.length; i++) {
+        for (r[a[i]] = {}, s = 0; s < c.length; s++) o(r[a[i]], [a[i], c[s]]);
+        for (s = 0; s < p.length; s++) o(r[a[i]], [a[i], "on" + p[s]])
+      }
+      for (i = 0; i < u.length; i++) o(r.user, ["user", u[i]]);
+      setTimeout(function() {
+        var f = e.createElement("script"),
+          d = e.getElementById("_webengage_script_tag");
+        f.type = "text/javascript",
+          f.async = !0,
+          f.src = ("https:" == e.location.protocol ? "https://ssl.widgets.webengage.com" : "http://cdn.widgets.webengage.com") + "/js/webengage-min-v-6.0.js",
+          d.parentNode.insertBefore(f, d)
+      })
+    }
+  }(window, document, "webengage");
+
+  webengage.init('14507cd64');
 </script>
+
 
 <script type = "text/JavaScript">
          function Hello() {
@@ -18,13 +54,13 @@ webengage.init('14507cd64');
 <p>This is a paragraph.</p>
 
       <input type = "button" onclick = "Hello();" name = "ok" value = "Click Me" />
-	  <button type="button" onclick="myFunction()">Login</button>
+	  <button type="button" onclick="myFunction()">webengage</button>
 
 
 <script>
 function myFunction() { 
   webengage.user.login('9SBOkLVMWvPX');
-	webengage.track("Added To Cart", {
+  webengage.track("Added To Cart", {
 "Product ID" : "AXK1337",
 "Price" : 39.80,
 });
